+ new module evioslam, deps: pangolin,libdc1394,libcaer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,4 +27,5 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muroute/src )
 add_subdirectory( muqueue )
 add_subdirectory( muroute )
 add_subdirectory( muflow )
+add_subdirectory( evioslam )
 
