--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,9 @@ include( CTest )
 
 option(WITH_OCTREE "Use Octomap for pointcloud compression and indexing" OFF)
 
-if (WITH_OCTREE)
+#if (WITH_OCTREE)
     find_package(octomap 1.8 REQUIRED)
-endif()
+#endif()
 
 set( LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/output/lib )
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/output/bin )
