[+] index update for all submodules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 include_directories( ${CMAKE_BINARY_DIR}/output/include )
 link_directories( ${CMAKE_BINARY_DIR}/output/lib  )
 
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muqueue/include/ )
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muflow/include )
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muroute/include )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muqueue/src )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muflow/src )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/muroute/src )
