--- a/muconfig/muconfig.toml
+++ b/muconfig/muconfig.toml
@@ -22,6 +22,7 @@
   default_port = ""
  
   [muroute.telemetry]
+    # telemetry is disabled if both @with_local_log and @with_network are set to false
     with_local_log = true
     with_network = false
     log_directory_path = "/home/nvidia/work/telemetry_logs"
