+ index update, muconfig to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "evioslam"]
 	path = evioslam
 	url = git@github.com:qqqzzz/evioslam.git
+[submodule "muconfig"]
+	path = muconfig
+	url = git@github.com:qqqzzz/muconfig.git
