--- a/muconfig/src/CMakeLists.txt
+++ b/muconfig/src/CMakeLists.txt
@@ -19,13 +19,14 @@ target_link_libraries(${TARGETNAME})
 
 set_target_properties(${TARGETNAME} PROPERTIES PUBLIC_HEADER "${MUCONFIG_HEADER}")
 set_property(TARGET ${TARGETNAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_target_properties(${TARGETNAME} PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})
 
 install(TARGETS ${TARGETNAME}
-    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${TARGETNAME} COMPONENT ${TARGETNAME}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT ${TARGETNAME}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    PUBLIC_HEADER DESTINATION include/${TARGETNAME} COMPONENT ${TARGETNAME}
+    RUNTIME DESTINATION bin COMPONENT ${TARGETNAME}
+    LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
     GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE COMPONENT ${TARGETNAME}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib COMPONENT ${TARGETNAME})
+    ARCHIVE DESTINATION lib COMPONENT ${TARGETNAME})
 
 if(NOT TARGET uninstall)
     configure_file(
