--- a/muconfig/CMakeLists.txt
+++ b/muconfig/CMakeLists.txt
@@ -1,6 +1,11 @@
 project( muconfig )
 cmake_minimum_required( VERSION 3.1 )
 
+set(VERSION 0.2.2)
+set(SOVERSION 0.2)
+
+set(CPACK_PACKAGE_NAME lib${PROJECT_NAME})
+
 LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 include( CheckIncludeFile )
