+ indexes up, CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project( Colibri )
+project( colibri )
 cmake_minimum_required( VERSION 3.1 )
 
 #LIST( APPEND CMAKE_MODULE_PATH ~/staging_dir/lib/cmake)
@@ -76,7 +76,5 @@ add_subdirectory( muconfig )
 add_subdirectory( muqueue )
 add_subdirectory( muroute )
 add_subdirectory( muflow )
-add_subdirectory( evioslam )
-
 
 include(CPack)
