--- a/muconfig/src/CMakeLists.txt
+++ b/muconfig/src/CMakeLists.txt
@@ -22,7 +22,7 @@ set_property(TARGET ${TARGETNAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
 set_target_properties(${TARGETNAME} PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})
 
 install(TARGETS ${TARGETNAME}
-    PUBLIC_HEADER DESTINATION include/${TARGETNAME} COMPONENT ${TARGETNAME}
+    PUBLIC_HEADER DESTINATION include/${TARGETNAME} COMPONENT ${TARGETNAME}-dev
     RUNTIME DESTINATION bin COMPONENT ${TARGETNAME}
     LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
     GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE COMPONENT ${TARGETNAME}
