--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-        token: ${{ secrets. CI_TOKEN }}
+        ssh-key: ${{ secrets.CI_TOKEN }}
     - name: Install reuirements
       run: sudo apt-get install -y libev-dev libboost-all-dev libasio-dev
     - name: configure
