--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "muflow"]
 	path = muflow
 	url = git@github.com:qqqzzz/muflow.git
+[submodule "muconfig"]
+	path = muconfig
+	url = git@github.com:qqqzzz/muconfig.git
