--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS ON)
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "info@edelsys.com")
 set(CPACK_OUTPUT_FILE_PREFIX packages)
 #set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}.amd64")
-set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+#set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 
 #####
 ######################################
